# realm-object-store

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dockerfile  Jenkinsfile  README.md  android.Dockerfile  dependencies.list  docker-build.sh  gcc7.Dockerfile  object_store.cpp  realm_binding_context.hpp  realm_error_type.hpp  shared_realm.cpp  shared_realm.hpp
src/: CMakeLists.txt  audit.hpp  binding_callback_thread_observer.cpp  binding_callback_thread_observer.hpp  binding_context.hpp  collection_notifications.cpp  collection_notifications.hpp  core_remote_mongo_client.cpp  core_remote_mongo_client.hpp  core_remote_mongo_collection.cpp  core_remote_mongo_collection.hpp  core_remote_mongo_database.cpp  core_remote_mongo_database.hpp  core_remote_mongo_read_operation.hpp  core_remote_mongo_result_types.hpp  core_stitch_service_client.cpp  core_stitch_service_client.hpp  execution_context_id.hpp  feature_checks.hpp  handover.cpp  handover.hpp  index_set.cpp  index_set.hpp  keypath_helpers.hpp  list.cpp  list.hpp  object.cpp  object.hpp  object_accessor.hpp  object_schema.cpp  object_schema.hpp  object_store.cpp  object_store.hpp  property.cpp  property.hpp  results.cpp  results.hpp  schema.cpp  schema.hpp  sdk.hpp  (+15 more)
src/impl/: collection_change_builder.cpp  collection_change_builder.hpp  collection_notifier.cpp  collection_notifier.hpp  external_commit_helper.hpp  handover.cpp  handover.hpp  object_accessor_impl.hpp  realm_coordinator.cpp  realm_coordinator.hpp  results_notifier.cpp  results_notifier.hpp  transact_log_handler.cpp  weak_realm_notifier.cpp  weak_realm_notifier.hpp  weak_realm_notifier_base.hpp
src/impl/android/: android_external_commit_helper.cpp  android_external_commit_helper.hpp  external_commit_helper.cpp  external_commit_helper.hpp  weak_realm_notifier.cpp  weak_realm_notifier.hpp
src/impl/apple/: apple_external_commit_helper.cpp  apple_external_commit_helper.hpp  external_commit_helper.cpp  keychain_helper.cpp  keychain_helper.hpp  weak_realm_notifier.cpp
src/impl/epoll/: external_commit_helper.cpp  external_commit_helper.hpp
src/impl/generic/: generic_external_commit_helper.cpp  generic_external_commit_helper.hpp
src/impl/windows/: external_commit_helper.cpp  external_commit_helper.hpp
src/parser/: parser.cpp  parser.hpp  query_builder.cpp
src/sdk/: accessor.hpp  arithmetic.cpp  arithmetic.hpp  list.cpp  list.hpp  object.cpp  object.hpp  object_id.cpp  object_id.hpp  optional.cpp  optional.hpp  primitive.cpp  primitive.hpp  property.cpp  property.hpp  realm.cpp  realm.hpp  results.cpp  results.hpp  schema_generator.cpp  schema_generator.hpp  string.cpp  string.hpp  time_point.cpp  time_point.hpp  type_info.hpp  util.hpp
src/server/: adapter.cpp  admin_realm.cpp  admin_realm.hpp  global_notifier.cpp  global_notifier.hpp
src/stdx/: type_traits.h
src/sync/: app.cpp  app.hpp  app_credentials.cpp  app_credentials.hpp  app_service_client.cpp  app_service_client.hpp  async_open_task.cpp  async_open_task.hpp  auth_request_client.cpp  auth_request_client.hpp  event_stream.cpp  event_stream.hpp  generic_network_transport.cpp  generic_network_transport.hpp  global_notifier.cpp  global_notifier.hpp  network_reachability_observer.hpp  partial_sync.cpp  partial_sync.hpp  push_client.cpp  push_client.hpp  remote_mongo_client.cpp  remote_mongo_client.hpp  remote_mongo_collection.cpp  remote_mongo_collection.hpp  remote_mongo_database.cpp  remote_mongo_database.hpp  remote_mongo_read_operation.hpp  remote_mongo_result_types.hpp  stitch_service_client.cpp  stitch_service_client.hpp  subscribable.hpp  sync_config.hpp  sync_manager.cpp  sync_manager.hpp  sync_permission.cpp  sync_permission.hpp  sync_session.cpp  sync_session.hpp  sync_user.cpp  (+1 more)
src/sync/apple/: system_configuration.cpp  system_configuration.hpp
src/sync/impl/: admin_realm_listener.cpp  admin_realm_listener.hpp  sync_client.hpp  sync_file.cpp  sync_file.hpp  sync_metadata.cpp  sync_metadata.hpp  work_queue.cpp
src/sync/impl/apple/: network_reachability_observer.cpp  network_reachability_observer.hpp  system_configuration.cpp  system_configuration.hpp
src/util/: any.hpp  bson.hpp  compiler.hpp  event_loop_dispatcher.hpp  event_loop_signal.hpp  fifo.cpp  fifo.hpp  scheduler.cpp  scheduler.hpp  thread_local.hpp  time.hpp  uuid.cpp
src/util/android/: event_loop_signal.hpp
src/util/bson/: bson.cpp  bson.hpp  datetime.cpp  datetime.hpp  indexed_map.hpp  mongo_timestamp.cpp  mongo_timestamp.hpp  null.hpp  parser.cpp  parser.hpp  regular_expression.cpp  regular_expression.hpp
src/util/generic/: event_loop_signal.cpp  event_loop_signal.hpp
src/util/uv/: event_loop_signal.hpp
tests/: CMakeLists.txt  android_main.cpp  any.cpp  bson.cpp  collection_change_indices.cpp  core_remote_mongo_tests.cpp  frozen_objects.cpp  handover.cpp  link_types.cpp  list.cpp  main.cpp  migrations.cpp  object.cpp  object_store.cpp  parser.cpp  primitive_list.cpp  query.json  realm.cpp  results.cpp  schema.cpp  sync.cpp  thread_safe_reference.cpp  transaction_log_parsing.cpp
tests/benchmarks/: CMakeLists.txt
tests/mongodb/: stitch.json
tests/mongodb/auth_providers/: anon-user.json  api-key.json  custom-function.json  local-userpass.json
tests/mongodb/functions/authFunc/: config.json
tests/mongodb/functions/confirmFunc/: config.json
tests/mongodb/functions/resetFunc/: config.json
tests/mongodb/functions/sumFunc/: config.json  config.json~  source.js~
tests/notifications-fuzzer/: CMakeLists.txt
tests/sync/: app.cpp  async_open.cpp  file.cpp  global_notifier.cpp  metadata.cpp  partial_sync.cpp  permission.cpp  remote_mongo_tests.cpp  sdk.cpp  session.cpp  sync_file.cpp  sync_manager.cpp  sync_test_utils.cpp  sync_test_utils.hpp  user.cpp
tests/sync/session/: connection_change_notifications.cpp  progress_notifications.cpp  session.cpp  session_util.cpp  session_util.hpp  state_change_notifications.cpp  wait_for_completion.cpp
tests/util/: bson.cpp  event_loop.cpp  event_loop.hpp  templated_test_case.hpp  test_file.cpp  test_file.hpp  test_utils.cpp  test_utils.hpp
(+19 files in other folders)
